# C_Data_Structures_and_Algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ArrayList.h  arraylist.h
src/: ArrayList.c  arraylist.c
test/: test_arraylist.c
